# dawn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fuzz.py
src/: check.cpp  clause.cpp  clause.h  dawn.cpp  dawn_lookahead.cpp  dimacs.cpp  dimacs.h  gen.cpp  gen_pigeonhole.cpp  main.cpp  propengine.cpp  propengine.h  sat.cpp  sat.h  simplify.cpp  solution.h  solver.cpp  solver.h
src/commands/: check.cpp  gen.cpp  gen_circuit.cpp  gen_hard.cpp  sha256.cpp  simplify.cpp  solve.cpp  stats.cpp  test.cpp  ui.cpp
src/old/: simplify.cpp
src/sat/: activity_heap.h  assignment.cpp  assignment.h  binary.cpp  binary.h  clause.cpp  clause.h  cnf.cpp  cnf.h  dimacs.cpp  dimacs.h  disjunction.cpp  disjunction.h  elimination.cpp  elimination.h  extender.h  logging.h  probing.cpp  probing.h  propengine.cpp  propengine.h  reconstruction.cpp  reconstruction.h  redshift.cpp  redshift.h  register.h  sat.cpp  sat.h  scc.cpp  scc.h  searcher.cpp  searcher.h  solution.h  solver.cpp  solver.h  stats.cpp  stats.h  subsumption.cpp  subsumption.h  vivification.cpp  (+1 more)
tests/: tests.cpp
